Now able to handle multiple organisms from one site.

--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,6 @@ haml:
 services:
     betaflymine:
         root: "http://beta.flymine.org/beta"
-        taxon: 7227
+        defaultTaxon: 7227
         example_region: "loc=X%3A11231027..11233388&tracks=betaflymine_Gene_track%2Cbetaflymine_Exon_track%2Cbetaflymine_Intron_track"
     
